--- a/components/menu.module.css
+++ b/components/menu.module.css
@@ -31,7 +31,7 @@
 
 .settingsDesktop {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 0.5rem;
   padding: 0 0.5rem;
 }
